--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
+python==3.8.8
 Flask==1.1.2
 gunicorn==20.1.0
 itsdangerous==2.1.1
 Jinja2==3.0.3
-numpy==1.22.3
+numpy==1.20.1
 pandas==1.3.5
-scikit-learn==1.0.2
-scipy==1.8.0
-Werkzeug==2.0.3
-wordcloud==1.8.1
