--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==1.1.2
 gunicorn==20.1.0
-itsdangerous==2.1.1
+itsdangerous==2.0.1
 Jinja2==3.0.3
 numpy==1.20.1
 pandas==1.3.5
+markupsafe==2.0.1
